Neste capítulo, progredimos solucionando nossos problemas e aprendemos bastante:
Boas práticas e convenções:

Vimos práticas de nomeação de eventos, delegates usados em eventos e seus argumentos.
Como usar os métodos Add/Remove:

Equivalente aos métodos get e set, vimos que eventos possuem os métodos add e remove.
O método GetInvocationList():

Foi necessário executar cada validação individualmente para pouparmos recursos computacionais de nossa máquina quando uma validação falhar e, para isto, contamos com o método GetInvocationList() retornando um array de delegates representando cada uma das assinaturas de nosso evento.

--- a/ByteBank.Agencias/ByteBank.Agencias.csproj
+++ b/ByteBank.Agencias/ByteBank.Agencias.csproj
@@ -77,6 +77,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="TextoBoxValidacao.cs" />
+    <Compile Include="ValidacaoEventArgs.cs" />
     <Page Include="EdicaoAgencia.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
